2010-02-14  Justin Davis  <juster@cpan.org>

	* 0.17 (RELEASE)

	* lib/CPANPLUS/Dist/Arch.pm (create): Added the 'quiet' and
	'verbose' dist options.
	(create): Fixed bug where we chdir to create a package and do not
	chdir back.  Messed up calling programs cwd.

2010-02-03  Justin Davis  <juster@cpan.org>

	* lib/CPANPLUS/Dist/Arch.pm (create): We are now verbose by
	default so people don't think we are hanging.

	* script/cpan2aur:  Heavily updated cpan2aur.  We can now create
	templates for AUR packages that need customization.  Then you only
	need to generate a package from the template.  We can also upload
	to the AUR easily from the command line.

2010-01-26  Justin Davis  <jrcd83@gmail.com>

	* lib/CPANPLUS/Dist/Arch.pm (create): Dependencies of modules are
	now installed as implicit packages.
	(_prepare_pkgdesc): Fixed bug where descriptions were "~".

2010-01-08  Justin Davis  <jrcd83@gmail.com>

	* 0.16 (RELEASE)

	* script/cpan2aur: Now we can also create a source package
	directory for tweaking the PKGBUILD and then running makepkg.

	* lib/CPANPLUS/Dist/Arch.pm (_translate_xs_deps): Fixed bug
	with detecting XS deps for Module::Build distributions.
	It never seemed to work right anyways, and would sometimes
	cause a fatal error.  (thanks Xenoterracide)

2010-01-07  Justin Davis  <jrcd83@gmail.com>

	* lib/CPANPLUS/Dist/Arch.pm (dist_pkgver): Fixed bug where
	underscores in developer releases were not preserved as they
	were supposed to be.  (thanks Xenoterracide for telling me)

2010-01-02  Justin Davis  <jrcd83@gmail.com>

	* 0.15 (RELEASE)

	* lib/CPANPLUS/Dist/Arch.pm (create): Fixed bug where I broke
	skiptest handling when creating the PKGBUILD.
	(create_pkgbuild): Added optional argument for skipping tests in
	PKGBUILD.
	(get_pkgbuild): Same as create_pkgbuild.

2009-12-12  Justin Davis  <jrcd83@gmail.com>

	* 0.14 (RELEASE)

	* lib/CPANPLUS/Dist/Arch.pm (get_cpandistdir): Fixed bug caused by