@@ -16,7 +16,7 @@ name: CPANPLUS-Dist-Arch
 provides:
   CPANPLUS::Dist::Arch:
     file: lib/CPANPLUS/Dist/Arch.pm
-    version: 0.17
+    version: 0.18
 requires:
   Archive::Tar: 0
   CPANPLUS: 0
@@ -40,4 +40,4 @@ requires:
   version: 0
 resources:
   repository: http://github.com/juster/perl-cpanplus-dist-arch
-version: 0.17
+version: 0.18
