@@ -3,7 +3,7 @@ NAME
     packages
 
 VERSION
-    Version 0.17
+    Version 0.18
 
 SYNOPSIS
       (First, setup cpan to use us automatically)
