@@ -17,7 +17,7 @@ use version               qw();
 use POSIX                 qw();
 use Cwd                   qw(getcwd);
 
-our $VERSION = '0.10';
+our $VERSION = '1.01';
 
 ## CONSTANTS
 ##############################################################################
@@ -192,9 +192,9 @@ sub confirm_overwrite
         return 1;
     }
 
-    # Keep asking until we get a yes, no, or blank answer...
-        my $answer = prompt_yn( "$file_path already exists, overwrite?" => 'yes' );
-
+    my $answer = prompt_yn( "$file_path already exists, overwrite?" => 'yes' );
+    return 0 if ( $answer == 0 );
+    
     unlink $file_path or die qq{Failed to "rm $file_path": $!};
     return 1;
 }
@@ -859,6 +859,10 @@ __END__
 =head1 NAME
 
 cpan2aur - AUR maintainer utility for CPAN perl modules
+
+=head1 VERSION
+
+Version 1.0
 
 =head1 SYNOPSIS
 
